1. Добавил топик DLQ: products.error 2. Сервис pg-saver пишет теперь не только в лог, но и в DLQ 3. Добавил в продюсеры acks=all и retries 4. Отключил автокоммит и добавил ручное смещение оффсета

--- a/apps/emitter/src/main/resources/application.yml
+++ b/apps/emitter/src/main/resources/application.yml
@@ -9,6 +9,8 @@ spring:
       bootstrap-servers: ${BOOTSTRAP_SERVERS:localhost:9094,localhost:9095,localhost:9096}
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      acks: all
+      retries: 5
     properties:
       security.protocol: SASL_SSL
       sasl.mechanism: PLAIN
