--- a/apps/saver-pg/src/main/resources/application.yml
+++ b/apps/saver-pg/src/main/resources/application.yml
@@ -2,10 +2,10 @@ spring:
   application:
     name: saver-pg
   kafka:
+    ssl:
+      trust-store-location: file:${TRUSTSTORE_LOCATION:certs/truststore.jks}
+      trust-store-password: changeit
     consumer:
-      ssl:
-        trust-store-location: file:${TRUSTSTORE_LOCATION:certs/truststore.jks}
-        trust-store-password: changeit
       group-id: ${GROUP_ID:saver-pg}
       bootstrap-servers: ${BOOTSTRAP_SERVERS:localhost:9094,localhost:9095,localhost:9096}
       properties:
@@ -13,6 +13,13 @@ spring:
         sasl.mechanism: PLAIN
         sasl.jaas.config: org.apache.kafka.common.security.plain.PlainLoginModule required username="client" password="changeit";
       auto-offset-reset: earliest
+      enable-auto-commit: false
+    producer:
+      bootstrap-servers: ${BOOTSTRAP_SERVERS:localhost:9094,localhost:9095,localhost:9096}
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      acks: all
+      retries: 5
   datasource:
     driver-class-name: org.postgresql.Driver
     url: ${POSTGRE_URL:jdbc:postgresql://localhost:5432/shopdb}
@@ -30,4 +37,5 @@ server:
 
 topics:
   filtered: ${TOPIC_FILTERED:shop.products.filtered}
+  error: ${TOPIC_ERROR:products.error}
 
