--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -450,9 +450,25 @@ services:
      KAFKA_CLUSTERS_1_PROPERTIES_SECURITY_PROTOCOL: "SASL_SSL"
      KAFKA_CLUSTERS_1_PROPERTIES_SASL_MECHANISM: PLAIN
      KAFKA_CLUSTERS_1_PROPERTIES_SASL_JAAS_CONFIG: "org.apache.kafka.common.security.plain.PlainLoginModule required username=\"admin\" password=\"admin-secret\";"
-
    volumes:
      - ./kafkaui:/var/private/ssl/
+   networks:
+     - kafka_net
+
+ schema-registry:
+   image: confluentinc/cp-schema-registry:7.4.4
+   hostname: schema-registry
+   container_name: schema-registry
+   depends_on:
+     - kafka-0
+     - kafka-1
+     - kafka-2
+   ports:
+     - "8081:8081"
+   environment:
+     SCHEMA_REGISTRY_HOST_NAME: schema-registry
+     SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'kafka-a-1:9093,kafka-a-2:9093,kafka-a-3:9093'
+     SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
    networks:
      - kafka_net
 
