--- a/apps/emitter/src/main/resources/application.yml
+++ b/apps/emitter/src/main/resources/application.yml
@@ -8,16 +8,19 @@ spring:
     producer:
       bootstrap-servers: ${BOOTSTRAP_SERVERS:localhost:9094,localhost:9095,localhost:9096}
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: io.confluent.kafka.serializers.json.KafkaJsonSchemaSerializer
       acks: all
       retries: 5
     properties:
       security.protocol: SASL_SSL
       sasl.mechanism: PLAIN
       sasl.jaas.config: org.apache.kafka.common.security.plain.PlainLoginModule required username="shop" password="changeit";
+      schema.registry.url: ${SCHEMA_REGISTRY_URL:http://localhost:8081}
+      auto.register.schemas: true
 
 app:
   produce_data_schedule: ${PRODUCE_DATA_SCHEDULE_MS:5000}
+  product_schema_path: ${SCHEMA_PATH:./schemas/product_schema.json}
 
 products:
   path: ${PRODUCTS_PATH:./products}
